--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,7 +1,7 @@
 <div class="lobby-container">
   <!-- HEADER -->
   <header class="lobby-header">
-    <h1>Votre couleur {{playerColor}}</h1>
+    <h1>Votre couleurrr {{playerColor}}</h1>
     <button class="logout-btn" (click)="logout()">Déconnexion</button>
   </header>
 
